# bevy_test

./: .gitignore  Cargo.toml  checklist.md
assets/: config.ron  data.stats.ron  stats.ron  userdata.ron
assets/shaders/: custom_material.wgsl
src/: body_type_stats.rs  bullet.rs  camera.rs  config.rs  events.rs  gamestate.rs  gui_test.rs  gun_collection.rs  input.rs  loading.rs  log.rs  main.rs  misc.rs  pause.rs  physics.rs  player.rs  sprite.rs  ui.rs  userdata.rs
src/ai/: basic.rs  mod.rs
src/enemy/: basic.rs  mod.rs
src/fx/: enemy_hit.rs  hp.rs  mod.rs
src/misc/: combo.rs  contact_damage.rs  enemy_spawning.rs  hitstun.rs  hp.rs  lifetime.rs  mod.rs  score.rs  vertical_bound.rs
src/mods/: body.rs  engines.rs  mod.rs
src/mods/guns/: bullet.rs  laser.rs  mod.rs
src/sfx/: enemy_hit.rs  mod.rs
src/ui/: hud.rs  main.rs  main_menu.rs  mod.rs  pause.rs
src/vfx/: enemy_hit.rs  hp.rs  mod.rs
src/weapons/: bullet.rs  gun_collection.rs  laser.rs  mod.rs
