[package]
name = "luft"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde = "1.0"
bevy_common_assets = { git = "https://github.com/NiklasEi/bevy_common_assets", tag = "v0.13.0-rc.1", features = ["ron"] }
bevy = {version="~0.16", features=["serialize"]}
tracing-subscriber = { version = "*", features = ["json", "registry"] }
tracing-appender = "0.2.3"
async-std = "1.13.1"

